--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,6 +31,24 @@
                         }
                 );
             });
+
+            $(document).ready(function () {
+                //Events that reset and restart the timer animation when the slides change
+                $("#transition-timer-carousel").on("slide.bs.carousel", function (event) {
+                    //The animate class gets removed so that it jumps straight back to 0%
+                    $(".transition-timer-carousel-progress-bar", this)
+                            .removeClass("animate").css("width", "0%");
+                }).on("slid.bs.carousel", function (event) {
+                    //The slide transition finished, so re-add the animate class so that
+                    //the timer bar takes time to fill up
+                    $(".transition-timer-carousel-progress-bar", this)
+                            .addClass("animate").css("width", "100%");
+                });
+
+                //Kick off the initial slide animation when the document is ready
+                $(".transition-timer-carousel-progress-bar", "#transition-timer-carousel")
+                        .css("width", "100%");
+            });
         </script>
     </head>
 
@@ -122,19 +140,133 @@
                         </li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"> <span class="glyphicon glyphicon-shopping-cart"></span> 7 Items <span class="caret"></span></a>
+                            <ul class="dropdown-menu dropdown-cart" role="menu">
+                                <li>
+                                    <span class="item">
+                                        <span class="item-left">
+                                            <img src="http://lorempixel.com/50/50/" alt="" />
+                                            <span class="item-info">
+                                                <span>Item name</span>
+                                                <span>23$</span>
+                                            </span>
+                                        </span>
+                                        <span class="item-right">
+                                            <button class="btn btn-xs btn-danger pull-right">x</button>
+                                        </span>
+                                    </span>
+                                </li>
+                                <li>
+                                    <span class="item">
+                                        <span class="item-left">
+                                            <img src="http://lorempixel.com/50/50/" alt="" />
+                                            <span class="item-info">
+                                                <span>Item name</span>
+                                                <span>23$</span>
+                                            </span>
+                                        </span>
+                                        <span class="item-right">
+                                            <button class="btn btn-xs btn-danger pull-right">x</button>
+                                        </span>
+                                    </span>
+                                </li>
+                                <li>
+                                    <span class="item">
+                                        <span class="item-left">
+                                            <img src="http://lorempixel.com/50/50/" alt="" />
+                                            <span class="item-info">
+                                                <span>Item name</span>
+                                                <span>23$</span>
+                                            </span>
+                                        </span>
+                                        <span class="item-right">
+                                            <button class="btn btn-xs btn-danger pull-right">x</button>
+                                        </span>
+                                    </span>
+                                </li>
+                                <li>
+                                    <span class="item">
+                                        <span class="item-left">
+                                            <img src="http://lorempixel.com/50/50/" alt="" />
+                                            <span class="item-info">
+                                                <span>Item name</span>
+                                                <span>23$</span>
+                                            </span>
+                                        </span>
+                                        <span class="item-right">
+                                            <button class="btn btn-xs btn-danger pull-right">x</button>
+                                        </span>
+                                    </span>
+                                </li>
                                 <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
+                                <li><a class="text-center" href="">View Cart</a></li>
                             </ul>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
+
+
+
+        <div class="container" style="width: 100%; margin: 0px; padding: 0px">
+
+            <div class="row">
+                <!-- The carousel -->
+                <div id="transition-timer-carousel" class="carousel slide transition-timer-carousel" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#transition-timer-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#transition-timer-carousel" data-slide-to="1"></li>
+                        <li data-target="#transition-timer-carousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="http://lorempixel.com/1600/600/nature" />
+                            <div class="carousel-caption">
+                                <h1 class="carousel-caption-header">Slide 1</h1>
+                                <p class="carousel-caption-text hidden-sm hidden-xs">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim aliquet rutrum. Praesent vitae ante in nisi condimentum egestas. Aliquam.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="http://lorempixel.com/1600/600/city" />
+                            <div class="carousel-caption">
+                                <h1 class="carousel-caption-header">Slide 2</h1>
+                                <p class="carousel-caption-text hidden-sm hidden-xs">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim aliquet rutrum. Praesent vitae ante in nisi condimentum egestas. Aliquam.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="http://lorempixel.com/1600/600/food" />
+                            <div class="carousel-caption">
+                                <h1 class="carousel-caption-header">Slide 3</h1>
+                                <p class="carousel-caption-text hidden-sm hidden-xs">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim aliquet rutrum. Praesent vitae ante in nisi condimentum egestas. Aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#transition-timer-carousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#transition-timer-carousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+
+                    <!-- Timer "progress bar" -->
+                    <hr class="transition-timer-carousel-progress-bar animate" />
+                </div>
+            </div>
+        </div>
 
 
 
