--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,6 +9,7 @@
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/font-awesome.min.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -211,7 +212,7 @@
 
         <div class="container" style="width: 100%; margin: 0px; padding: 0px">
 
-            <div class="row">
+            <div class="row" style="width: 100%; margin: 0px; padding: 0px">
                 <!-- The carousel -->
                 <div id="transition-timer-carousel" class="carousel slide transition-timer-carousel" data-ride="carousel">
                     <!-- Indicators -->
@@ -271,27 +272,79 @@
 
 
         <h1>Hello!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec erat nibh. Sed molestie nibh eget risus lacinia viverra. Proin sit amet commodo erat. Cras condimentum posuere dolor id porttitor. Aenean sed ipsum nisi. Curabitur et augue nec ante dignissim pellentesque sit amet ac nibh. Integer sit amet magna vestibulum, vulputate nisl quis, fringilla erat. Phasellus fringilla tellus ut magna vestibulum consectetur. Maecenas a purus quis tortor sollicitudin pharetra ut id quam. Nulla sed arcu at massa dictum rhoncus a id arcu. Donec ultricies sapien eu pharetra imperdiet. Quisque vitae est convallis, placerat nulla porttitor, rhoncus erat.</p>
-
-        <p>Nulla rutrum quam eu dolor sollicitudin blandit. Sed convallis in augue quis ornare. Pellentesque ornare nulla eu mauris varius, et ullamcorper dui fringilla. Vivamus nec mauris et diam varius consectetur. Maecenas consequat viverra ex ut convallis. Nunc consectetur est porttitor tincidunt interdum. Aenean neque tellus, lobortis vitae imperdiet quis, sodales eu neque. Donec laoreet volutpat metus vel vehicula. Vivamus vitae metus in augue finibus sodales. Suspendisse eget facilisis dui. Praesent ullamcorper eros a mi consectetur, semper viverra elit euismod. Morbi venenatis eros ac diam ornare tincidunt id sed nulla. Mauris euismod nisi id porttitor sollicitudin. Sed in mauris id ligula faucibus dignissim nec condimentum mi. Morbi porta tempor metus, commodo ornare nibh elementum nec. Vestibulum convallis vel mi eu vulputate.</p>
-
-        <p>Nullam vehicula, arcu quis dignissim dictum, justo massa volutpat est, sit amet ullamcorper metus dolor id libero. Pellentesque sed venenatis dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi vel sem pretium, ultricies nisi in, sagittis dolor. Praesent convallis feugiat venenatis. Curabitur odio tellus, dapibus sit amet lobortis a, volutpat ac eros. Etiam ut sodales sem. Integer tincidunt, augue nec auctor sollicitudin, est arcu aliquet neque, pellentesque placerat purus tellus id arcu. Proin facilisis ac velit auctor malesuada. Proin eleifend egestas pulvinar.</p>
-
-        <p>Nam sem orci, imperdiet at tortor a, porttitor dictum dui. Vivamus auctor, ex id tristique pellentesque, mi orci molestie ligula, ultricies vehicula sapien purus in nulla. Aliquam quis libero ut purus efficitur fringilla. Maecenas a ultrices erat. Nulla efficitur tellus eu libero scelerisque, nec tincidunt metus mattis. Mauris quam turpis, lacinia eu aliquet vitae, placerat sed lorem. Duis id dolor et elit consectetur suscipit. Aliquam pellentesque orci metus, nec pellentesque lacus molestie nec. Quisque aliquet at metus ut scelerisque. Nunc pharetra neque at semper viverra. Mauris condimentum mi urna. Donec lobortis consequat tortor, a efficitur sem fermentum at. Vestibulum vulputate enim mi.</p>
-
-        <p>Pellentesque molestie libero a augue consectetur, ac placerat nisi eleifend. Praesent sit amet nulla id nulla volutpat porta. Aenean fermentum, nibh a accumsan malesuada, lectus odio luctus metus, et aliquet urna libero eu neque. Morbi volutpat leo ut turpis tempus lobortis. Nullam ullamcorper id justo ut placerat. Praesent quis nunc sit amet metus euismod ornare vitae rutrum mi. Sed eget libero ut dui placerat iaculis vel ut elit. Nulla cursus felis nunc. Suspendisse dapibus sollicitudin ligula vitae gravida. Integer faucibus convallis fringilla. Nulla eget maximus ante. </p>
-
-        <p>Nulla rutrum quam eu dolor sollicitudin blandit. Sed convallis in augue quis ornare. Pellentesque ornare nulla eu mauris varius, et ullamcorper dui fringilla. Vivamus nec mauris et diam varius consectetur. Maecenas consequat viverra ex ut convallis. Nunc consectetur est porttitor tincidunt interdum. Aenean neque tellus, lobortis vitae imperdiet quis, sodales eu neque. Donec laoreet volutpat metus vel vehicula. Vivamus vitae metus in augue finibus sodales. Suspendisse eget facilisis dui. Praesent ullamcorper eros a mi consectetur, semper viverra elit euismod. Morbi venenatis eros ac diam ornare tincidunt id sed nulla. Mauris euismod nisi id porttitor sollicitudin. Sed in mauris id ligula faucibus dignissim nec condimentum mi. Morbi porta tempor metus, commodo ornare nibh elementum nec. Vestibulum convallis vel mi eu vulputate.</p>
-
-        <p>Nullam vehicula, arcu quis dignissim dictum, justo massa volutpat est, sit amet ullamcorper metus dolor id libero. Pellentesque sed venenatis dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi vel sem pretium, ultricies nisi in, sagittis dolor. Praesent convallis feugiat venenatis. Curabitur odio tellus, dapibus sit amet lobortis a, volutpat ac eros. Etiam ut sodales sem. Integer tincidunt, augue nec auctor sollicitudin, est arcu aliquet neque, pellentesque placerat purus tellus id arcu. Proin facilisis ac velit auctor malesuada. Proin eleifend egestas pulvinar.</p>
-
-        <p>Nam sem orci, imperdiet at tortor a, porttitor dictum dui. Vivamus auctor, ex id tristique pellentesque, mi orci molestie ligula, ultricies vehicula sapien purus in nulla. Aliquam quis libero ut purus efficitur fringilla. Maecenas a ultrices erat. Nulla efficitur tellus eu libero scelerisque, nec tincidunt metus mattis. Mauris quam turpis, lacinia eu aliquet vitae, placerat sed lorem. Duis id dolor et elit consectetur suscipit. Aliquam pellentesque orci metus, nec pellentesque lacus molestie nec. Quisque aliquet at metus ut scelerisque. Nunc pharetra neque at semper viverra. Mauris condimentum mi urna. Donec lobortis consequat tortor, a efficitur sem fermentum at. Vestibulum vulputate enim mi.</p>
-
-        <p>Pellentesque molestie libero a augue consectetur, ac placerat nisi eleifend. Praesent sit amet nulla id nulla volutpat porta. Aenean fermentum, nibh a accumsan malesuada, lectus odio luctus metus, et aliquet urna libero eu neque. Morbi volutpat leo ut turpis tempus lobortis. Nullam ullamcorper id justo ut placerat. Praesent quis nunc sit amet metus euismod ornare vitae rutrum mi. Sed eget libero ut dui placerat iaculis vel ut elit. Nulla cursus felis nunc. Suspendisse dapibus sollicitudin ligula vitae gravida. Integer faucibus convallis fringilla. Nulla eget maximus ante. </p>
 
 
 
 
+
+        <!-- FOOTER -->
+        <footer>
+            <div class="footer" id="footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6">
+                            <h3> Member profile </h3>
+                            <ul>
+                                <li> <a href="#"> Your acount </a> </li>
+                                <li> <a href="#"> Bought & saved photos </a> </li>
+                                <li> <a href="#"> Recipes & invoices </a> </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6">
+                            <h3> Useful resouces </h3>
+                            <ul>
+                                <li> <a href="#"> Terms & conditions </a> </li>
+                                <li> <a href="#"> Payment methods </a> </li>
+                                <li> <a href="#"> Help & FAQ </a> </li>
+                            </ul>
+                        </div>                        
+                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6">
+                            <h3> Keep me updated! </h3>
+                            <ul>
+                                <li>
+                                    <form action="" method="post">
+
+                                        <div class="input-group">
+                                            <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></span>
+                                            <input type="text" class="form-control" placeholder="your@email.com" aria-describedby="basic-addon1" required />
+                                        </div>                                        
+                                        <input type="submit" value="Subscribe Now!" class="btn btn-default btn-block" style="margin-top: 5px; background: #ddd" />
+                                    </form>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6 ">
+                            <h3> Let's stay in touch! </h3>                            
+                            <ul class="social">
+                                <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
+                                <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
+                                <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
+                                <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
+                                <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--/.row--> 
+                </div>
+                <!--/.container--> 
+            </div>
+            <!--/.footer-->
+
+            <div class="footer-bottom">
+                <div class="container">
+                    <p class="pull-left"> Copyright © PhotoShop & Dawid Zagórski 2015. All right reserved. </p>
+                    <div class="pull-right">
+                        <ul class="nav nav-pills payments">
+                            <li><i class="fa fa-cc-visa"></i></li>
+                            <li><i class="fa fa-cc-mastercard"></i></li>
+                            <li><i class="fa fa-cc-amex"></i></li>
+                            <li><i class="fa fa-cc-paypal"></i></li>
+                        </ul> 
+                    </div>
+                </div>
+            </div>
+            <!--/.footer-bottom--> 
+        </footer>
 
 
 
