--- a/public_html/index.html
+++ b/public_html/index.html
@@ -225,33 +225,51 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="http://lorempixel.com/1600/600/nature" />
-                            <div class="carousel-caption">
-                                <h1 class="carousel-caption-header">Slide 1</h1>
-                                <p class="carousel-caption-text hidden-sm hidden-xs">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim aliquet rutrum. Praesent vitae ante in nisi condimentum egestas. Aliquam.
-                                </p>
-                            </div>
+                            <img src="http://lorempixel.com/1600/700/city/9" alt="City" />
+                            <div class="header-text">
+                                <div class="col-md-12 text-center">
+                                    <h2>
+                                        <span>Welcome to <strong>Photo</strong>Shop</span>
+                                    </h2>
+                                    <div class="hidden-xs">
+                                        <h3>
+                                            <span>Find the perfect photo that suits you the best!</span>
+                                        </h3>                                        
+                                        <a class="btn btn-theme btn-lg btn-min-block" href="#"><span class="glyphicon glyphicon-search"></span>&nbsp;&nbsp;Search among over 6 985 245 images!</a></div>
+                                </div>
+                            </div><!-- /header-text -->
                         </div>
 
                         <div class="item">
-                            <img src="http://lorempixel.com/1600/600/city" />
-                            <div class="carousel-caption">
-                                <h1 class="carousel-caption-header">Slide 2</h1>
-                                <p class="carousel-caption-text hidden-sm hidden-xs">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim aliquet rutrum. Praesent vitae ante in nisi condimentum egestas. Aliquam.
-                                </p>
-                            </div>
+                            <img src="http://lorempixel.com/1600/700/food" alt="food" />
+                            <div class="header-text">
+                                <div class="col-md-12 text-center">
+                                    <h2>
+                                        <span style="background: #ff3300">Always in good taste!</span>
+                                    </h2>
+                                    <div class="hidden-xs">
+                                        <h3>
+                                            <span>Fresh &amp mouthwaterning food images...</span>
+                                        </h3>                                        
+                                        <a class="btn btn-theme btn-lg btn-min-block" href="#">Find out our Food &amp; Drink collection...</a></div>
+                                </div>
+                            </div><!-- /header-text -->
                         </div>
 
                         <div class="item">
-                            <img src="http://lorempixel.com/1600/600/food" />
-                            <div class="carousel-caption">
-                                <h1 class="carousel-caption-header">Slide 3</h1>
-                                <p class="carousel-caption-text hidden-sm hidden-xs">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim aliquet rutrum. Praesent vitae ante in nisi condimentum egestas. Aliquam.
-                                </p>
-                            </div>
+                            <img src="http://lorempixel.com/1600/700/cats" alt="Cats" />
+                            <div class="header-text">
+                                <div class="col-md-12 text-center">
+                                    <h2>
+                                        <span style="background: #cc33ff">Cats are awesome!</span>
+                                    </h2>
+                                    <div class="hidden-xs">
+                                        <h3>
+                                            <span>All the people like cats!</span>
+                                        </h3>                                        
+                                        <a class="btn btn-theme btn-lg btn-min-block" href="#">Buy something from Cat's Lightbox!</a></div>
+                                </div>
+                            </div><!-- /header-text -->
                         </div>
                     </div>
 
@@ -272,6 +290,7 @@
 
 
         <h1>Hello!</h1>
+        <h2>welcome...</h2>
 
 
 
@@ -282,23 +301,23 @@
             <div class="footer" id="footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6">
+                        <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
                             <h3> Member profile </h3>
                             <ul>
                                 <li> <a href="#"> Your acount </a> </li>
-                                <li> <a href="#"> Bought & saved photos </a> </li>
-                                <li> <a href="#"> Recipes & invoices </a> </li>
+                                <li> <a href="#"> Bought &amp; saved photos </a> </li>
+                                <li> <a href="#"> Recipes &amp; invoices </a> </li>
                             </ul>
                         </div>
-                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6">
+                        <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
                             <h3> Useful resouces </h3>
                             <ul>
-                                <li> <a href="#"> Terms & conditions </a> </li>
+                                <li> <a href="#"> Terms &amp; conditions </a> </li>
                                 <li> <a href="#"> Payment methods </a> </li>
-                                <li> <a href="#"> Help & FAQ </a> </li>
+                                <li> <a href="#"> Help &amp; FAQ </a> </li>
                             </ul>
                         </div>                        
-                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6">
+                        <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
                             <h3> Keep me updated! </h3>
                             <ul>
                                 <li>
@@ -313,7 +332,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-lg-3  col-md-3 col-sm-3 col-xs-6 ">
+                        <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
                             <h3> Let's stay in touch! </h3>                            
                             <ul class="social">
                                 <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
@@ -332,7 +351,7 @@
 
             <div class="footer-bottom">
                 <div class="container">
-                    <p class="pull-left"> Copyright © PhotoShop & Dawid Zagórski 2015. All right reserved. </p>
+                    <p class="pull-left"> Copyright © PhotoShop &amp; Dawid Zagórski 2015. All right reserved. </p>
                     <div class="pull-right">
                         <ul class="nav nav-pills payments">
                             <li><i class="fa fa-cc-visa"></i></li>
