--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,7 +61,7 @@
 
 
         <nav class="navbar navbar-default navbar-main" role="navigation">
-            <div class="container-fluid">
+            <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
@@ -79,7 +79,7 @@
                         <li class="dropdown mega-dropdown active">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <span class="caret"></span></a>				
                             <div class="dropdown-menu mega-dropdown-menu">
-                                <div class="container-fluid">
+                                <div class="container">
                                     <div class="tab-content">
                                         <div class="tab-pane active" id="men">
                                             <ul class="nav-list list-inline">
@@ -108,7 +108,7 @@
                     <ul class="nav navbar-nav navbar-right">                        
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
-                            <ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">
+                            <ul class="dropdown-menu" style="padding: 15px; min-width: 250px;">
                                 <li>
                                     <div class="row">
                                         <div class="col-md-12">
@@ -133,7 +133,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="divider" style="padding: 0px; margin: 0px 0px 15px 0px"></li>
+                                <li class="divider" style="padding: 0px; margin: 0px 0px 15px 0px;"></li>
                                 <li>
                                     <input class="btn btn-primary btn-block" type="button" id="sign-in-google" value="Not a member yet? Register!">                                    
                                 </li>
@@ -212,7 +212,7 @@
 
         <div class="container" style="width: 100%; margin: 0px; padding: 0px">
 
-            <div class="row" style="width: 100%; margin: 0px; padding: 0px">
+            <div class="row" style="width: 100%; margin: 0px; padding: 0px; background: black">
                 <!-- The carousel -->
                 <div id="transition-timer-carousel" class="carousel slide transition-timer-carousel" data-ride="carousel">
                     <!-- Indicators -->
@@ -225,7 +225,8 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="http://lorempixel.com/1600/700/city/9" alt="City" />
+                            <!-- <img src="http://lorempixel.com/1920/800/city/9" alt="City" /> -->                           
+                            <img src="images/slider/city-night-2.jpg" alt="City" />
                             <div class="header-text">
                                 <div class="col-md-12 text-center">
                                     <h2>
@@ -241,7 +242,7 @@
                         </div>
 
                         <div class="item">
-                            <img src="http://lorempixel.com/1600/700/food" alt="food" />
+                            <img src="http://lorempixel.com/1920/800/food" alt="food" />
                             <div class="header-text">
                                 <div class="col-md-12 text-center">
                                     <h2>
@@ -257,7 +258,7 @@
                         </div>
 
                         <div class="item">
-                            <img src="http://lorempixel.com/1600/700/cats" alt="Cats" />
+                            <img src="http://lorempixel.com/1920/800/cats" alt="Cats" />
                             <div class="header-text">
                                 <div class="col-md-12 text-center">
                                     <h2>
@@ -289,8 +290,94 @@
 
 
 
-        <h1>Hello!</h1>
-        <h2>welcome...</h2>
+
+
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <br/><br/>
+                    <h2>
+                        New to PhotoShop?                        
+                    </h2>
+                    <h3>
+                        Choose the best subscription plan to your needs!                        
+                    </h3>
+                    <br/><br/>
+                </div>
+            </div>        
+
+            <div class="row db-padding-btm db-attached">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="db-wrapper">
+                        <div class="db-pricing-eleven db-bk-color-one">
+                            <div class="price">
+                                <sup>$</sup>99
+                                <small>per month</small>
+                            </div>
+                            <div class="type">
+                                SMALL PLAN
+                            </div>
+                            <ul>
+                                <li><i class="glyphicon glyphicon-camera"></i>up to 10 images per day</li>
+                                <li><i class="glyphicon glyphicon-print"></i>1 account </li>
+                                <li><i class="glyphicon glyphicon-time"></i>1 month subscription </li>                                
+                            </ul>
+                            <div class="pricing-footer">
+
+                                <a href="#" class="btn db-button-color-square btn-lg">BOOK ORDER</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="db-wrapper">
+                        <div class="db-pricing-eleven db-bk-color-two popular">
+                            <div class="price">
+                                <sup>$</sup>159
+                                <small>per month</small>
+                            </div>
+                            <div class="type">
+                                MEDIUM PLAN
+                            </div>
+                            <ul>
+                                <li><i class="glyphicon glyphicon-camera"></i>up to 100 images per day</li>
+                                <li><i class="glyphicon glyphicon-print"></i>up to 10 accounts</li>
+                                <li><i class="glyphicon glyphicon-time"></i>1 month subscription </li> 
+                                <li><i class="glyphicon glyphicon-star-empty"></i>best value offer!</li>
+                            </ul>
+                            <div class="pricing-footer">
+
+                                <a href="#" class="btn db-button-color-square btn-lg">BOOK ORDER</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="db-wrapper">
+                        <div class="db-pricing-eleven db-bk-color-three">
+                            <div class="price">
+                                <sup>$</sup>799
+                                <small>per month</small>
+                            </div>
+                            <div class="type">
+                                ADVANCED PLAN
+                            </div>
+                            <ul>
+                                <li><i class="glyphicon glyphicon-camera"></i>unlimited number of downloads per day </li>
+                                <li><i class="glyphicon glyphicon-print"></i>up to 25 accounts</li>
+                                <li><i class="glyphicon glyphicon-time"></i>1 month subscription </li>                                
+                            </ul>
+                            <div class="pricing-footer">
+
+                                <a href="#" class="btn db-button-color-square btn-lg">BOOK ORDER</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
 
 
