--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,6 +50,7 @@
                 $(".transition-timer-carousel-progress-bar", "#transition-timer-carousel")
                         .css("width", "100%");
             });
+
         </script>
     </head>
 
@@ -250,7 +251,7 @@
                                     </h2>
                                     <div class="hidden-xs">
                                         <h3>
-                                            <span>Fresh &amp mouthwaterning food images...</span>
+                                            <span>Fresh &amp mouthwatering food images...</span>
                                         </h3>                                        
                                         <a class="btn btn-theme btn-lg btn-min-block" href="#">Find out our Food &amp; Drink collection...</a></div>
                                 </div>
@@ -378,7 +379,6 @@
             </div>
 
         </div>
-
 
 
 
