--- a/public_html/index.html
+++ b/public_html/index.html
@@ -397,7 +397,7 @@
                             </ul>
                         </div>
                         <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
-                            <h3> Useful resouces </h3>
+                            <h3> Useful resources </h3>
                             <ul>
                                 <li> <a href="#"> Terms &amp; conditions </a> </li>
                                 <li> <a href="#"> Payment methods </a> </li>
