--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Exo+2:400,300,200,200italic,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -213,7 +214,7 @@
 
         <div class="container" style="width: 100%; margin: 0px; padding: 0px">
 
-            <div class="row" style="width: 100%; margin: 0px; padding: 0px; background: black">
+            <div class="row carousel-container">
                 <!-- The carousel -->
                 <div id="transition-timer-carousel" class="carousel slide transition-timer-carousel" data-ride="carousel">
                     <!-- Indicators -->
@@ -290,24 +291,26 @@
         </div>
 
 
-
-
+        <div class="page-title">
+            <div class="container">             
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="text-center"><h1>New to PhotoShop?</h1></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-12">
-                    <br/><br/>
+                <div class="col-xs-12">                     
                     <h2>
-                        New to PhotoShop?                        
-                    </h2>
-                    <h3>
                         Choose the best subscription plan to your needs!                        
-                    </h3>
-                    <br/>
+                    </h2>                
                 </div>
             </div>        
 
-            <div class="row db-padding-btm db-attached">
+            <div class="row db-padding-btm db-attached" style="margin-top: 20px;">
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="db-wrapper">
                         <div class="db-pricing-eleven db-bk-color-one">
@@ -438,7 +441,7 @@
 
             <div class="footer-bottom">
                 <div class="container">
-                    <p class="pull-left"> Copyright © PhotoShop &amp; Dawid Zagórski 2015. All right reserved. </p>
+                    <p class="pull-left"> Copyright © PhotoShop &amp; Dawid Zagórski 2015. All rights reserved. </p>
                     <div class="pull-right">
                         <ul class="nav nav-pills payments">
                             <li><i class="fa fa-cc-visa"></i></li>
