--- a/public_html/index.html
+++ b/public_html/index.html
@@ -252,7 +252,7 @@
                                     </h2>
                                     <div class="hidden-xs">
                                         <h3>
-                                            <span>Fresh &amp mouthwatering food images...</span>
+                                            <span>Fresh &amp; mouthwatering food images...</span>
                                         </h3>                                        
                                         <a class="btn btn-theme btn-lg btn-min-block" href="#">Find out our Food &amp; Drink collection...</a></div>
                                 </div>
