--- a/public_html/show-cart.html
+++ b/public_html/show-cart.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">        
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>PhotoShop Stock | Welcome!</title>
+        <title>Your shopping cart | PhotoShop Stock</title>
         <!-- Bootstrap -->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -145,7 +145,7 @@
                                 <li class="divider" style="padding: 0px; margin: 0px 0px 15px 0px;"></li>
                                 <li>
                                     <form action="register.html">
-                                       <button class="btn btn-primary btn-block" type="submit">Not a member yet? Register!</button>
+                                        <button class="btn btn-primary btn-block" type="submit">Not a member yet? Register!</button>
                                     </form>                                                                     
                                 </li>
                             </ul>
@@ -166,182 +166,41 @@
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
-        </nav>
-
-
-
-        <div class="container" style="width: 100%; margin: 0px; padding: 0px">
-
-            <div class="row carousel-container">
-                <!-- The carousel -->
-                <div id="transition-timer-carousel" class="carousel slide transition-timer-carousel" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#transition-timer-carousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#transition-timer-carousel" data-slide-to="1"></li>
-                        <li data-target="#transition-timer-carousel" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <!-- <img src="http://lorempixel.com/1920/800/city/9" alt="City" /> -->                           
-                            <img src="images/slider/city-night-2.jpg" alt="City" />
-                            <div class="header-text">
-                                <div class="col-md-12 text-center">
-                                    <h2>
-                                        <span>Welcome to <strong>Photo</strong>Shop</span>
-                                    </h2>
-                                    <div class="hidden-xs">
-                                        <h3>
-                                            <span>Find the perfect photo that suits you the best!</span>
-                                        </h3>                                        
-                                        <a class="btn btn-theme btn-lg btn-min-block" href="#"><span class="glyphicon glyphicon-search"></span>&nbsp;&nbsp;Search among over 6 985 245 images!</a></div>
-                                </div>
-                            </div><!-- /header-text -->
-                        </div>
-
-                        <div class="item">
-                            <img src="http://lorempixel.com/1920/800/food" alt="food" />
-                            <div class="header-text">
-                                <div class="col-md-12 text-center">
-                                    <h2>
-                                        <span style="background: #ff3300">Always in good taste!</span>
-                                    </h2>
-                                    <div class="hidden-xs">
-                                        <h3>
-                                            <span>Fresh &amp; mouthwatering food images...</span>
-                                        </h3>                                        
-                                        <a class="btn btn-theme btn-lg btn-min-block" href="#">Find out our Food &amp; Drink collection...</a></div>
-                                </div>
-                            </div><!-- /header-text -->
-                        </div>
-
-                        <div class="item">
-                            <img src="http://lorempixel.com/1920/800/cats" alt="Cats" />
-                            <div class="header-text">
-                                <div class="col-md-12 text-center">
-                                    <h2>
-                                        <span style="background: #cc33ff">Cats are awesome!</span>
-                                    </h2>
-                                    <div class="hidden-xs">
-                                        <h3>
-                                            <span>All the people like cats!</span>
-                                        </h3>                                        
-                                        <a class="btn btn-theme btn-lg btn-min-block" href="#">Buy something from Cat's Lightbox!</a></div>
-                                </div>
-                            </div><!-- /header-text -->
-                        </div>
-                    </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#transition-timer-carousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#transition-timer-carousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-
-                    <!-- Timer "progress bar" -->
-                    <hr class="transition-timer-carousel-progress-bar animate" />
-                </div>
-            </div>
-        </div>
+        </nav>       
 
 
         <div class="page-title">
             <div class="container">             
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1 class="text-center">New to PhotoShop?</h1>
+                        <h1>Your shopping cart</h1>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="container">
-            <div class="row text-center">
-                <div class="col-xs-12">                     
-                    <h2>
-                        Choose the best subscription plan to your needs!                        
-                    </h2>                
-                </div>
-            </div>        
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>Selected items:</h2>
 
-            <div class="row db-padding-btm db-attached" style="margin-top: 20px; margin-bottom: -50px">
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <div class="db-wrapper">
-                        <div class="db-pricing-eleven db-bk-color-one">
-                            <div class="price">
-                                <sup>$</sup>99
-                                <small>per month</small>
-                            </div>
-                            <div class="type">
-                                SMALL PLAN
-                            </div>
-                            <ul>
-                                <li><i class="glyphicon glyphicon-camera"></i>up to 10 images per day</li>
-                                <li><i class="glyphicon glyphicon-print"></i>1 account </li>
-                                <li><i class="glyphicon glyphicon-time"></i>1 month subscription </li>                                
-                            </ul>
-                            <div class="pricing-footer">
+                    <div class="simpleCart_items text-center" ></div>
 
-                                <a href="#" class="btn db-button-color-square btn-lg">BOOK ORDER</a>
-                            </div>
-                        </div>
+                    <br style="clear: both" />
+                    <div class="checkoutEmptyLinks">
+                        <!--Here's the Links to Checkout and Empty Cart-->
+                        <button type="button" class="simpleCart_empty btn btn-danger"><span class="glyphicon glyphicon-remove"></span>&nbsp;&nbsp;Empty cart</button>
+                        &nbsp;&nbsp;
+                        <button type="button" class="simpleCart_checkout btn btn-success"><span class="glyphicon glyphicon-ok"></span>&nbsp;&nbsp;Checkout &amp; pay with PayPal!</button>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <div class="db-wrapper">
-                        <div class="db-pricing-eleven db-bk-color-two popular">
-                            <div class="price">
-                                <sup>$</sup>159
-                                <small>per month</small>
-                            </div>
-                            <div class="type">
-                                MEDIUM PLAN
-                            </div>
-                            <ul>
-                                <li><i class="glyphicon glyphicon-camera"></i>up to 100 images per day</li>
-                                <li><i class="glyphicon glyphicon-print"></i>up to 10 accounts</li>
-                                <li><i class="glyphicon glyphicon-time"></i>1 month subscription </li> 
-                                <li><i class="glyphicon glyphicon-star-empty"></i>best value offer!</li>
-                            </ul>
-                            <div class="pricing-footer">
-
-                                <a href="#" class="btn db-button-color-square btn-lg">BOOK ORDER</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <div class="db-wrapper">
-                        <div class="db-pricing-eleven db-bk-color-three">
-                            <div class="price">
-                                <sup>$</sup>799
-                                <small>per month</small>
-                            </div>
-                            <div class="type">
-                                ADVANCED PLAN
-                            </div>
-                            <ul>
-                                <li><i class="glyphicon glyphicon-camera"></i>unlimited number of downloads per day </li>
-                                <li><i class="glyphicon glyphicon-print"></i>up to 25 accounts</li>
-                                <li><i class="glyphicon glyphicon-time"></i>1 month subscription </li>                                
-                            </ul>
-                            <div class="pricing-footer">
-
-                                <a href="#" class="btn db-button-color-square btn-lg">BOOK ORDER</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
-
-
         
+        
+
+
+
         <!-- FOOTER -->
         <footer>
             <div class="footer" id="footer">
